--- a/index.html
+++ b/index.html
@@ -85,6 +85,36 @@
       </div>
       <div class="w-dyn-list">
         <div role="list" class="collection-grid w-dyn-items">
+          <!-- Product | ITEM | #1001001 | HEAD -->
+          <div role="listitem" class="collection-item w-dyn-item filter-item all-products candle-products">
+            <a href="product1001001.html" class="product-wrapper w-inline-block">
+              <div class="product-image-inner">
+                <img loading="lazy" alt="" src="images/product.1001001.jpg"
+                  sizes="(max-width: 479px) 90vw, (max-width: 991px) 45vw, 29vw"
+                  srcset="images/product.1001001.jpg 500w, images/product.1001001.jpg 800w, images/product.1001001.jpg 1000w"
+                  class="product-image" />
+              </div>
+              <div class="product-info">
+                <div class="product-info-grid">
+                  <div class="product-desc-wrapper">
+                    <div class="product-name">炸雞香薰蠟燭</div>
+                    <div class="product-subname medium-caps-text">Fried chicken Scented Candles
+                    </div>
+                  </div>
+                  <div class="product-price-wrapper">
+                    <div class="product-price">$ 59.90 HKD</div>
+                    <div class="product-price compare"><!--COMPARE-PRICE--></div>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <div class="w-dyn-list">
+              <div role="listitem" class="w-dyn-item">
+                <div class="product-label-new">新產品!</div>
+              </div>
+            </div>
+          </div>
+          <!-- Product | ITEM | END -->
           <!-- Product | ITEM | #2001004 | HEAD -->
           <div role="listitem" class="collection-item w-dyn-item filter-item all-products postcard-products">
             <a href="product2001004.html" class="product-wrapper w-inline-block">
@@ -102,7 +132,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price">$ 14.90 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -132,7 +162,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price">$ 14.90 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -162,7 +192,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price">$ 14.90 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -191,7 +221,7 @@
                     <div class="product-subname medium-caps-text">Cha Chaan Teng Postcard Collection</div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 15.00 HKD</div>
+                    <div class="product-price">$ 14.90 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
