--- a/product1001001.html
+++ b/product1001001.html
@@ -81,10 +81,10 @@
           <div class="grid-second-half full-width-half">
             <div class="product-info no-padding">
               <div class="product-item-name">炸雞香薰蠟燭</div>
-              <div class="product-item-subname medium-caps-text">Fried chicken Scented Candles</div>
+              <div class="product-item-subname medium-caps-text">Fried chicken Scented Candle</div>
               <div class="product-item-size small-caps-text">5pcs 5.5oz / 150g (2-3hrs)</div>
               <div class="price-block">
-                <div class="product-item-price">$ 59.90 HKD</div>
+                <div class="product-item-price">$ 59.00 HKD</div>
                 <div class="product-item-price compare-price"><!--COMPARE-PRICE--></div>
               </div>
             </div>
