--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
       role="banner" class="navbar w-nav">
       <div class="nav-container">
-        <div id="w-node-d28bca2f-e8a5-8ea1-05fd-7466eaf525a3-eaf525a0" class="menu-button w-nav-button w--open"
-          style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0"
-          aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="true" bis_skin_checked="1"><img alt=""
-            loading="lazy" src="https://assets-global.website-files.com/plugins/Basic/assets/placeholder.60f9b1840c.svg"
-            class="menu-button-image">
+        <div id="w-node-d28bca2f-e8a5-8ea1-05fd-7466eaf525a3-eaf525a0" class="menu-button w-nav-button w--open" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false" bis_skin_checked="1"><img alt="" loading="lazy" src="https://assets-global.website-files.com/plugins/Basic/assets/placeholder.60f9b1840c.svg" class="menu-button-image">
           <div class="menu-icon-dynamic" bis_skin_checked="1">
             <div class="bar top" bis_skin_checked="1"></div>
             <div class="bar middle" bis_skin_checked="1"></div>
@@ -98,11 +94,11 @@
                 <div class="product-info-grid">
                   <div class="product-desc-wrapper">
                     <div class="product-name">炸雞香薰蠟燭</div>
-                    <div class="product-subname medium-caps-text">Fried chicken Scented Candles
+                    <div class="product-subname medium-caps-text">Fried chicken Scented Candle
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 59.90 HKD</div>
+                    <div class="product-price">$ 59.00 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -132,7 +128,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 14.90 HKD</div>
+                    <div class="product-price">$ 15.00 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -162,7 +158,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 14.90 HKD</div>
+                    <div class="product-price">$ 15.00 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -192,7 +188,7 @@
                     </div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 14.90 HKD</div>
+                    <div class="product-price">$ 15.00 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
@@ -221,7 +217,7 @@
                     <div class="product-subname medium-caps-text">Cha Chaan Teng Postcard Collection</div>
                   </div>
                   <div class="product-price-wrapper">
-                    <div class="product-price">$ 14.90 HKD</div>
+                    <div class="product-price">$ 15.00 HKD</div>
                     <div class="product-price compare"><!--COMPARE-PRICE--></div>
                   </div>
                 </div>
