--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               class="footer-brand-link w-inline-block"><img src="images/illumine-LOGO.png" loading="lazy" alt=""></a>
           </div>
           <div class="footer-contact footer-text-bottom" bis_skin_checked="1">
-            <div bis_skin_checked="1">Tel: +852 6623 0948 <br>Email: illumine.official.info@gmail.com</div>
+            <div bis_skin_checked="1">Instagram: @illumine.hk <br>Email: illumine.official.info@gmail.com</div>
           </div>
           <a href="https://www.instagram.com/illumine.hk/"><img class="payment w-inline-block footer-text-bottom"
               src="images/instagram.svg"></a>
