--- a/product1001001.html
+++ b/product1001001.html
@@ -89,9 +89,9 @@
               </div>
             </div>
             <div class="cart-wrapper">
-              <a data-default-text="前往 WhatsApp 對話進行下單" aria-busy="false"
+              <a data-default-text="前往 Instagram 對話進行下單" aria-busy="false"
                 aria-haspopup="false" class="w-commerce-commercebuynowbutton buy-now button"
-                href="https://api.whatsapp.com/send/?phone=85266230948&text&type=phone_number&app_absent=0">前往 WhatsApp
+                href="https://ig.me/m/illumine.hk">前往 Instagram
                 對話進行下單</a>
             </div>
             <div class="product-details">
@@ -136,7 +136,7 @@
                 class="footer-brand-link w-inline-block"><img src="images/illumine-LOGO.png" loading="lazy" alt=""></a>
             </div>
             <div class="footer-contact footer-text-bottom" bis_skin_checked="1">
-              <div bis_skin_checked="1">Tel: +852 6623 0948 <br>Email: illumine.official.info@gmail.com</div>
+              <div bis_skin_checked="1">Instagram: @illumine.hk <br>Email: illumine.official.info@gmail.com</div>
             </div>
             <a href="https://www.instagram.com/illumine.hk/"><img class="payment w-inline-block footer-text-bottom"
                 src="images/instagram.svg"></a>
